--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Poppins:wght@300&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -14,14 +15,45 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+body::-webkit-scrollbar {
+  background-color: transparent;
+  width: 7px;
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #5f5f5f;
+  width: 7px;
+  border-radius: 10px;
+}
+
+.menu::-webkit-scrollbar {
+  background-color: transparent;
+  width: 5px;
+  border-radius: 10px;
+}
+
+.menu::-webkit-scrollbar-thumb {
+  background-color: #5f5f5f;
+  width: 5px;
+  border-radius: 10px;
+}
+
 .logo {
   background: linear-gradient(90deg, #00dbde, #fc00ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: "Cedarville Cursive", cursive;
 }
 
 .logo2 {
-  background: linear-gradient(90deg, #00dbde, #fc00ff);
+  background: linear-gradient(1deg, #00dbde, #fc00ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-family: "Cedarville Cursive", cursive;
+}
+
+.shadow {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
